# relay-mailer

./: .dockerignore  .gitignore  Cargo.toml  Config.toml  Dockerfile  README.md  SecretConfig.toml
src/: config.rs  form.rs  mailing.rs  main.rs
