[package]
name = "relay-mailer"
version = "0.1.2"
edition = "2021"
description = "An Actix Web server leveraging the lettre crate to relay form field data to email addresses"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/harr1424/relay-mailer"
keywords = ["email", "relay", "lettre", "actix-web"]

[dependencies]
actix-web = "4.9.0"
serde = {  version ="1.0.206", features = ["derive"] }
serde_json = "1.0.124"
lettre = { version = "0.11.7", features = ["builder", "smtp-transport", "rustls-tls"] }
dotenv = "0.15.0"
toml = "0.8.19"
log = "0.4.22"
env_logger = "0.11.5"
actix_route_rate_limiter = "0.2.1"
chrono = "0.4.38"
validator = { version = "0.18.1", features = ["derive"] }
ammonia = "4.0.0"


[profile.release]
lto = true
codegen-units = 1